--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
         <meta charset="utf-8" />
         <title></title>
         
-        <style>
-            canvas {
-                outline: 1px solid black;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css" />
         
         <!-- Utilisation de RequireJS pour charger les fichiers JavaScript -->
         <script data-main="js/game" src="js/lib/require.js"></script>
     </head>
     <body>
         <canvas id="canvas" width="960" height="600"></canvas>
+        <footer><a href="https://github.com/etienne-gauvin/planes">github.com/etienne-gauvin/planes</a></footer>
     </body>
 </html>
