--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" manifest="manifest.appcache">
     <head>
         <meta charset="utf-8" />
         <title></title>
