Ajout d'un système de pause et d'un second canvas pour le HUD

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
         <script data-main="js/game" src="js/lib/require.js"></script>
     </head>
     <body>
-        <canvas id="canvas" width="960" height="600"></canvas>
+        <main>
+            <canvas id="canvas" width="960" height="600"></canvas>
+            <canvas id="hudcanvas" width="960" height="600"></canvas>
+        </main>
         <footer><a href="https://github.com/etienne-gauvin/planes">github.com/etienne-gauvin/planes</a></footer>
     </body>
 </html>
