Réécriture du coeur du jeu

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
         <link rel="stylesheet" href="style.css" />
         
         <!-- Utilisation de RequireJS pour charger les fichiers JavaScript -->
-        <script data-main="js/game" src="js/lib/require.js"></script>
+        <script data-main="js/main" src="js/lib/require.js"></script>
     </head>
     <body>
         <main>
             <canvas id="canvas" width="960" height="600"></canvas>
-            <canvas id="hudcanvas" width="960" height="600"></canvas>
         </main>
         <footer><a href="https://github.com/etienne-gauvin/planes">github.com/etienne-gauvin/planes</a></footer>
     </body>
