Ajout d'un bouton pour activer ou désactiver le son dans le jeu

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         <main>
             <canvas id="canvas" width="960" height="600"></canvas>
         </main>
-        <footer><a href="https://github.com/etienne-gauvin/planes">github.com/etienne-gauvin/planes</a></footer>
+        <footer>
+            <a href="https://github.com/etienne-gauvin/planes">github.com/etienne-gauvin/planes</a>
+            <button class="sound-mute-toggle">
+                <span class="mute">mute 🔇</span>
+                <span class="unmute hidden">unmute 🔉</span>
+            </button>
+        </footer>
     </body>
 </html>
